# KFBase

./: .gitignore  CMakeLists.txt  Doxyfile  KFBaseConfig.cmake.in  README.md  conanfile.py
cmake/: kfbaseConfig.cmake.in
core/: CMakeLists.txt
core/include/: MassConstraint.hpp  MomentumConstraint.hpp  Particle.hpp  ParticlePxPyPzE.hpp  VertexConstraint.hpp  VertexParticle.hpp
core/include/kfbase/core/: ConstantMomentumParticle.hpp  DoubleParticleAngularConstraint.hpp  FlowConstraint.hpp  Hypothesis.hpp  InputVertexConstraint.hpp  IntermediateNeutralParticle.hpp  MassConstraint.hpp  MomentumConstraint.hpp  OutputVertexConstraint.hpp  Particle.hpp  ParticleAngularConstraint.hpp  ParticleMassLessThetaPhiE.hpp  ParticlePxPyPz.hpp  ParticlePxPyPzE.hpp  Vertex.hpp  VertexConstraint.hpp  VertexParticle.hpp  VertexRhoPhiZ.hpp  VertexXYZ.hpp
core/src/: ConstantMomentumParticle.cpp  DoubleParticleAngularConstraint.cpp  FlowConstraint.cpp  Hypothesis.cpp  InputVertexConstraint.cpp  IntermediateNeutralParticle.cpp  MassConstraint.cpp  MomentumConstraint.cpp  OutputVertexConstraint.cpp  Particle.cpp  ParticleAngularConstraint.cpp  ParticleMassLessThetaPhiE.cpp  ParticlePxPyPz.cpp  ParticlePxPyPzE.cpp  Vertex.cpp  VertexConstraint.cpp  VertexParticle.cpp  VertexRhoPhiZ.cpp  VertexXYZ.cpp
include/: DoubleParticleAngularConstraint.hpp  FlowConstraint.hpp  Hypothesis.hpp  KFMomentumConstraint.hpp  KFParticle.hpp  MassConstraint.hpp  MomentumConstraint.hpp  Particle.hpp  ParticleAngularConstraint.hpp  ParticleMassLessThetaPhiE.hpp  ParticlePxPyPzE.hpp  VertexConstraint.hpp  VertexParticle.hpp
optimizer/: CMakeLists.txt
optimizer/include/: CommonParams.hpp  Constraint.hpp  EqualityLagrangeConstraint.hpp  Function.hpp  LagrangeConstraint.hpp  NameException.hpp  NonLagrangeConstraint.hpp  Optimizer.hpp  ParamContainer.hpp  Switch.hpp  TargetChiSquare.hpp  TargetFunction.hpp
optimizer/include/kfbase/newtonian_opt/: CommonParams.hpp  Constraint.hpp  EqualityLagrangeConstraint.hpp  Function.hpp  LagrangeConstraint.hpp  NameException.hpp  Named.hpp  NonLagrangeConstraint.hpp  Optimizer.hpp  ParamContainer.hpp  Switch.hpp  TargetChiSquare.hpp  TargetFunction.hpp
optimizer/src/: CommonParams.cpp  Constraint.cpp  EqualityLagrangeConstraint.cpp  Function.cpp  LagrangeConstraint.cpp  Named.cpp  NonLagrangeConstraint.cpp  Optimizer.cpp  ParamContainer.cpp  Switch.cpp  TargetChiSquare.cpp  TargetFunction.cpp
src/: DoubleParticleAngularConstraint.cpp  FlowConstraint.cpp  Hypothesis.cpp  KFMomentumConstraint.cpp  KFParticle.cpp  MassConstraint.cpp  MomentumConstraint.cpp  Particle.cpp  ParticleMassLessThetaPhiE.cpp  VertexConstraint.cpp  VertexParticle.cpp
